feat: implement the `rlpTxn` module
Signed-off-by: Franklin Delehelle <franklin.delehelle@odena.eu>